# Smart-Email-Classification-App

./: .gitignore  Dockerfile  README.md  app.py  app_v1.py  pyproject.toml  requirements.txt
