[project]
name = "smart-email-classification-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.35.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
